[tool.poetry]
name = "msl-x"
version = "0.0.7b"
description = ""
authors = ["MojaveHao <HTTcode2020@126.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "msl_x"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flet = "^0.9.0"
multitasking = "^0.0.11"
retry = "^0.9.2"
psutil = "^5.9.5"
pycryptodome = "^3.18.0"
pyhocon = "^0.3.60"
pyperclip = "^1.8.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
