[tool.poetry]
name = "msl-x"
version = "0.0.8b"
description = ""
authors = ["MojaveHao <HTTcode2020@126.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{include = "msl_x"}]

[tool.poetry.dependencies]
flet = "^0.12.0"
loguru = "^0.7.2"
multitasking = "^0.0.11"
psutil = "^5.9.5"
pycryptodome = "^3.19.0"
pyperclip = "^1.8.2"
pytoml = "^0.1.21"
Requests = "^2.31.0"
retry = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
